# sp1-recursive

./: .env  README.md
fibonacci/elf/: riscv32im-succinct-zkvm-elf
fibonacci/program/: Cargo.toml
fibonacci/script/: .env.example  Cargo.toml
recursive/elf/: riscv32im-succinct-zkvm-elf
recursive/program/: Cargo.toml
recursive/program/src/: main.rs
recursive/script/: Cargo.toml
recursive/script/src/: main.rs
